test/snapshots/wipple_test__help-show-code.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/help-show-code.test.wipple:14:1: error: `foo` is not compatible with `bar`"
output: []
