test/snapshots/wipple_test__list-mismatched-elements.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/list-mismatched-elements.test.wipple:3:15: error: expected a number here, but found a piece of text"
  - "tests/list-mismatched-elements.test.wipple:3:22: error: expected a number here, but found unit"
output: []
