test/snapshots/wipple_test__lists.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - Has 1
  - Has 3
  - Has 2
  - Has 2
  - Has 2
