test/snapshots/wipple_test__math.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "3"
  - "3"
  - "15"
  - "2.50"
