test/snapshots/wipple_test__mismatched-block.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/mismatched-block.test.wipple:6:5: error: expected a number here, but found a piece of text"
output: []
