test/snapshots/wipple_test__mismatched-call.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/mismatched-call.test.wipple:8:14: error: expected a piece of text here, but found a number
