test/snapshots/wipple_test__mismatched-types.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/mismatched-types.test.wipple:3:2: error: expected text here, but found a number
