test/snapshots/wipple_test__missing-closing-parenthesis.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/missing-closing-parenthesis.test.wipple:3:11: error: expected a closing parenthesis (`)`) here
