test/snapshots/wipple_test__missing-inputs.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - location:
      path: tests/missing-inputs.test.wipple
      start:
        line: 2
        column: 0
        index: 19
      end:
        line: 2
        column: 4
        index: 23
    severity: error
    template:
      id: missing-inputs
      data:
        function: show
        inputs: text
output: []
